[gd_scene load_steps=2 format=3 uid="uid://b3fa2nnd5fn8t"]

[ext_resource type="Script" path="res://scripts/Ui/VictoryDialog.gd" id="1_c5rgb"]

[node name="VictoryDialog" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c5rgb")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 27

[node name="VictoryLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Victory!"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="NextButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 0
theme_override_font_sizes/font_size = 30
text = "Next"

[node name="RestartButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 0
theme_override_font_sizes/font_size = 30
text = "Restart"

[node name="MenuButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
text = "Menu"

[connection signal="button_up" from="VBoxContainer/HBoxContainer/NextButton" to="." method="_on_next_released"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer/RestartButton" to="." method="_on_restart_released"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer/MenuButton" to="." method="_on_menu_released"]
